add collection path on install.argocd-with-helm.yml playbook

--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -3,6 +3,9 @@
   connection: local
   become: false
 
+  collections:
+  - community.kubernetes
+  
   tasks:
   - name: Add Argo Helm repository
     community.kubernetes.helm_repository:
