replace host gke-cluster wwith all in argocd playbook yml file

--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -1,11 +1,11 @@
-- hosts: gke_cluster
+- hosts: all
   gather_facts: false
   connection: local
   become: false
 
   collections:
   - community.kubernetes
-  
+
   tasks:
   - name: Add Argo Helm repository
     community.kubernetes.helm_repository:
