--- a/TerraformOnGCP/GKE/ansible/ansible.cfg
+++ b/TerraformOnGCP/GKE/ansible/ansible.cfg
@@ -2,4 +2,4 @@
 
 inventory = inventory
 private_key_file = ~/.ssh/google_compute_engine.pub
-collections_paths = ./collections
+collections_paths = ./ansible/collections
