--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -29,30 +29,30 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           token_format: 'access_token'
 
-    #   - name: Set up Google Cloud SDK
-    #     uses: google-github-actions/setup-gcloud@v2
-    #     with:
-    #       project_id: ${{ secrets.GCP_PROJECT_ID }}
-    #       install_components: gke-gcloud-auth-plugin
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: gke-gcloud-auth-plugin
 
-    #   - name: Configure gcloud and kubectl 
-    #     run: |
-    #         gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-    #         gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
-    #     env:
-    #         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+      - name: Configure gcloud and kubectl 
+        run: |
+            gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
+        env:
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
-    #   - name: Debug SA key file
-    #     run: cat $GITHUB_WORKSPACE/gcp-sa-key.json
+      - name: Debug SA key file
+        run: cat $GITHUB_WORKSPACE/gcp-sa-key.json
 
-    #   - name: Create Argo CD Namespace
-    #     run: kubectl create namespace argocd
+      - name: Create Argo CD Namespace
+        run: kubectl create namespace argocd
 
-    #   - name: Deploy Nginx
-    #     run: kubectl apply -f k8s-configs/deployment.yml
+      - name: Deploy Nginx
+        run: kubectl apply -f k8s-configs/deployment.yml
 
-    #   - name: Deploy LoadBalancer and Ingress
-    #     run: kubectl apply -f k8s-configs/lb-and-ingress-svc.yml
+      - name: Deploy LoadBalancer and Ingress
+        run: kubectl apply -f k8s-configs/lb-and-ingress-svc.yml
 
       - name: Create Ansible Inventory Directory
         run: mkdir -p ansible/inventory
@@ -85,11 +85,10 @@ jobs:
       - name: Install google.cloud collection
         run: ansible-galaxy collection install google.cloud
 
-      - name: Install ansible collections
+      - name: Install collections
         run: |
-          mkdir -p ./ansible/collections
-          ansible-galaxy collection install google.cloud -p $(pwd)/ansible/collections
-          ansible-galaxy collection install community.kubernetes -p $(pwd)/ansible/collections
+          ansible-galaxy collection install google.cloud -p ./collections
+          ansible-galaxy collection install community.kubernetes -p ./collections
         working-directory: ./TerraformOnGCP/GKE
 
       - name: Debug Ansible configuration
