--- a/TerraformOnGCP/GKE/ansible/ansible.cfg
+++ b/TerraformOnGCP/GKE/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 
-inventory = inventory
-private_key_file = ~/.ssh/google_compute_engine.pub
-collections_paths = ./ansible/collections
+# inventory = inventory
+# private_key_file = ~/.ssh/google_compute_engine.pub
+collections_paths = ./collections
