change wait for argocd api module to k8s_info

--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -31,7 +31,7 @@
             - --insecure # For lab only; use TLS in production!
 
   - name: Wait for Argo CD API server to become ready
-    kubernetes.core.wait_for:
+    kubernetes.core.k8s_info:
       api_version: v1
       kind: Pod
       namespace: argocd
