--- a/.github/workflows/app-deploy-workflow.yml
+++ b/.github/workflows/app-deploy-workflow.yml
@@ -29,18 +29,18 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           token_format: 'access_token'
 
-      # - name: Set up Google Cloud SDK
-      #   uses: google-github-actions/setup-gcloud@v2
-      #   with:
-      #     project_id: ${{ secrets.GCP_PROJECT_ID }}
-      #     install_components: gke-gcloud-auth-plugin
+      - name: Set up gcloud cli
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: gke-gcloud-auth-plugin
 
-      # - name: Configure gcloud and kubectl 
-      #   run: |
-      #       gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-      #       gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
-      #   env:
-      #       GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
+      - name: connect to GKE
+        run: |
+            gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+            gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
+        env:
+            GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
       # # - name: Create Argo CD Namespace
       #   run: kubectl create namespace argocd
@@ -132,3 +132,4 @@ jobs:
             --extra-vars "argocd_namespace=argocd"
             --inventory ${{ github.workspace }}/TerraformOnGCP/GKE/ansible/inventory/gcp.yml
             --extra-vars "ansible_python_interpreter=/usr/bin/python3"
+            --extra-vars "kubeconfig_path=~/.kube/config"
