--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -17,7 +17,7 @@
       name: argocd
       chart_ref: argo/argo-cd
       release_namespace: argocd
-      create_namespace: true # good practice.
+      create_namespace: false # we already have this ns created via another step in workflow.
       wait: true
       wait_timeout: 300s
       chart_version: "5.16.0"  # Use a recent, stable version. Check for latest: https://artifacthub.io/packages/helm/argo/argo-cd
@@ -29,6 +29,7 @@
               tag: v2.9.3 
           extraArgs:
             - --insecure # For lab only; use TLS in production!
+      kubeconfig: ~/.kube/config
 
   - name: Wait for Argo CD API server to become ready
     kubernetes.core.k8s_info:
