--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -17,7 +17,7 @@
       name: argocd
       chart_ref: argo/argo-cd
       release_namespace: argocd
-      create_namespace: false # we already have this ns created via another step in workflow.
+      create_namespace: false # we already have this ns created via another step in.
       wait: true
       wait_timeout: 300s
       chart_version: "5.16.0"  # Use a recent, stable version. Check for latest: https://artifacthub.io/packages/helm/argo/argo-cd
@@ -29,12 +29,11 @@
               tag: v2.9.3 
           extraArgs:
             - --insecure # For lab only; use TLS in production!
-      kubeconfig: ~/.kube/config
 
   - name: Wait for Argo CD API server to become ready
     kubernetes.core.k8s_info:
       api_version: v1
-      kind: Pod
+      kind: deployment # changed from pod t odeployment for test
       namespace: argocd
       name: argocd-server
       wait: yes
@@ -42,6 +41,9 @@
       wait_condition:
         type: Ready
         status: "True"
+    when:
+      - "'kubernetes' in lookup('pipe', 'pip list')"
+
 
   - name: Get Argo CD initial admin password
     ansible.builtin.command:
