--- a/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
+++ b/TerraformOnGCP/GKE/ansible/playbooks/install-argocd-with-helm.yml
@@ -47,10 +47,14 @@
 
   - name: Get Argo CD initial admin password
     ansible.builtin.command:
-      cmd: kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
-    register: argocd_admin_password
-    changed_when: false # This command doesn't change anything on the system.
+      cmd: kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}"
+    register: argocd_admin_password_encoded
+    changed_when: false
+
+  - name: Decode the password
+    ansible.builtin.set_fact:
+      argocd_admin_password: "{{ argocd_admin_password_encoded.stdout | b64decode }}"
 
   - name: Print Argo CD initial admin password
     ansible.builtin.debug:
-      msg: "Argo CD initial admin password: {{ argocd_admin_password.stdout }}"
+      msg: "Argo CD initial admin password: {{ argocd_admin_password }}"
