add debug and continue even with fail

--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -48,6 +48,8 @@ jobs:
         run: helm repo add argo https://argoproj.github.io/argo-helm
 
       - name: Install Argo CD
+        id: helm_install  # Add an ID to this step
+        continue-on-error: true  # Continue even if this step fails
         run: |
           helm install argocd argo/argo-cd \
             --namespace argocd \
@@ -61,13 +63,17 @@ jobs:
 
       - name: Wait for a While  # Add a delay before checking status
         run: sleep 60
-
       # --- DEBUGGING: Check cluster state AFTER Helm install ---
       - name: Debug - List Pods (Argo CD Namespace) - After Install
+        if: steps.helm_install.outcome == 'failure'  # Run only if Helm install failed
         run: kubectl get pods -n argocd -o wide
 
       - name: Debug - Describe Argo CD Server Pod - After Install
+        if: steps.helm_install.outcome == 'failure'  # Run only if Helm install failed
         run: kubectl describe pod -n argocd -l app.kubernetes.io/name=argocd-server
+      - name: Debug - Describe Argo CD deployment - After Install
+        if: steps.helm_install.outcome == 'failure'  # Run only if Helm install failed.
+        run: kubectl describe deployment -n argocd argocd-server
 
       - name: Get Argo CD initial admin password
         id: get_password
