add nginx/lb creatiopn to this workflow as well - fix working directory

--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -9,6 +9,9 @@ jobs:
     permissions:
       contents: 'read'
       id-token: 'write'
+    defaults:
+      run:
+        working-directory: ./TerraformOnGCP/GKE
 
     steps:
       - name: Checkout code
