--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -1,7 +1,11 @@
 name: Install Argo CD
 
 on:
-  workflow_dispatch:
+    workflow_run:
+      workflows: ["Deploy GKE Cluster"]
+      types:
+        - completed
+    workflow_dispatch:
 
 jobs:
   install:
@@ -23,6 +27,7 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_ACCESS_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          token_format: 'access_token'
 
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
@@ -36,13 +41,6 @@ jobs:
             gcloud container clusters get-credentials gke-cluster --zone us-central1-f --project ${{ secrets.GCP_PROJECT_ID }}
         env:
             GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
-  
-       # --- DEBUGGING: Check cluster state BEFORE Helm install ---
-      - name: Debug - List Nodes
-        run: kubectl get nodes -o wide
-
-      - name: Debug - List Pods (All Namespaces)
-        run: kubectl get pods -A -o wide
 
       - name: Create Argo CD Namespace
         run: kubectl create namespace argocd
@@ -52,6 +50,9 @@ jobs:
 
       - name: Deploy LoadBalancer and Ingress
         run: kubectl apply -f k8s-configs/lb-and-ingress-svc.yml
+
+      - name: Install google.cloud collection
+        run: ansible-galaxy collection install google.cloud
 
       - name: Install Argo CD
         run: |
