--- a/.github/workflows/destroy-gke-cluster.yml
+++ b/.github/workflows/destroy-gke-cluster.yml
@@ -39,4 +39,4 @@ jobs:
         run: terraform init
 
       - name: Destroy Terraform Resources
-        run: terraform destroy -auto-approve
+        run: terraform destroy -auto-approve -var="create_cluster=false"
