--- a/.github/workflows/install-argocd-workflow.yml
+++ b/.github/workflows/install-argocd-workflow.yml
@@ -2,7 +2,7 @@ name: Install Argo CD
 
 on:
     workflow_run:
-      workflows: ["Deploy GKE Cluster"]
+      workflows: ["Create svc and deployment"]
       types:
         - completed
     workflow_dispatch:
