--- a/.github/workflows/install-prometheus.yml
+++ b/.github/workflows/install-prometheus.yml
@@ -1,8 +1,8 @@
-name: Install Argo CD
+name: Install Prometheus
 
 on:
     workflow_run:
-      workflows: ["Create svc & Deploy nginx"]
+      workflows: ["Install Argo CD"]
       types:
         - completed
     workflow_dispatch:
@@ -45,20 +45,33 @@ jobs:
       - name: Install google.cloud collection
         run: ansible-galaxy collection install google.cloud
 
-      - name: Install Argo CD
-        run: |
-          kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/v2.14.3/manifests/install.yaml
+      - name: create Monitoring namespace
+        run: kubectl create namespace monitoring || true
 
-      - name: Get Argo CD initial admin password
-        id: get_password
+      - name: Add Prometheus Helm Repository
         run: |
-          PASSWORD=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-          echo "password=$PASSWORD" >> "$GITHUB_OUTPUT"
-  
-      - name: Output Argo CD Password
-        run: |
-            echo "Argo CD initial admin password: ${{ steps.get_password.outputs.password }}"
-        shell: bash
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo update
 
-      - name: configure argocd with app CRD
-        run: kubectl apply -f TerraformOnGCP/GKE/argocd/argocd-config.yml
+      - name: Install Node Exporter
+        run: |
+          helm install node-exporter prometheus-community/prometheus-node-exporter \
+           --namespace monitoring \
+           --create-namespace \
+           --wait --timeout 180s
+
+      - name: Install Prometheus with Helm
+        run: |
+          helm install prometheus prometheus-community/prometheus \
+            --namespace monitoring \
+            --create-namespace \
+            --wait --timeout 600s \
+            -f monitoring/prometheus-values.yml \ #this file contains lb svc creation as well
+            --debug
+        #   --values my-prometheus-values.yaml  # Uncomment and create this file for custom configuration
+
+      # Optional: Verify Installation
+      - name: Verify Prometheus Installation
+        run: |
+          kubectl get pods -n monitoring
+          kubectl get svc -n monitoring
